tests/errors/duplicate_type_params.dang
type Bad[a, a] {
  pub value: a
}
